my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENAMECOLL_uint32/T_ENAMECOLL_uint32-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_ENAMECOLL_UINT32_STRUCT_H
#define T_ENAMECOLL_UINT32_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENAMECOLL_uint32(void);


#endif /* not T_ENAMECOLL_UINT32_STRUCT_H */
